--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
- 
-<form action="ag.php" method="post">
-<input type="date" name="password" id="password">
-<input type="submit">
 
+<html>
+<meta http-equiv="refresh" content="15">
+<iframe src="ndex.html"
+height="970px"
+width="1000px"
+></iframe>
+<iframe src="chat.txt"
+height="970px"
+width="1000px"
+></iframe>
+</html>
