--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a href="https://m.facebook.com/profile.php/?id=100064762745129&name=xhp_nt__fb__action__open_user"><i class="fab fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="chat.txt"><i class="fab fa-twitter"></i></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/abhinandanghosssh/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="chat.txt"><i class="fab fa-linkedin-in"></i></a>
           </li>
           <li>
             <a href="https://www.instagram.com/abhinandanghosssh/"><i class="fab fa-instagram"></i></a>
