--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="chat.txt"><i class="fab fa-twitter"></i></a>
           </li>
           <li>
-            <a href="chat.txt"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/"><i class="fab fa-github"></i></a>
           </li>
           <li>
             <a href="https://www.instagram.com/abhinandanghosssh/"><i class="fab fa-instagram"></i></a>
