--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="content">
       <div class="detail">
-        <h2>ABHINANDAN GHOSH<br /><span>STUDENT</span></h2>
+        <h2>ABHINANDAN GHOSH<br /><span>🎓 Computer Science Undergraduate at Midnapore College(Autonomous)</span></h2>
         <ul class="sci">
           <li>
             <a href="https://m.facebook.com/profile.php/?id=100064762745129&name=xhp_nt__fb__action__open_user"><i class="fab fa-facebook-f"></i></a>
