--- a/index.html
+++ b/index.html
@@ -1,118 +1,67 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>card</title>
-  <link rel="stylesheet" href="./Profile-card.css" />
-  <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
-</head>
-<body>
-  <div class="card">
-    <div class="img-bx">
-      <img src="e5fbaff1-02c6-47f7-b744-fca734e95692-transformed.jpeg" alt="img" />
-    </div>
-    <div class="content">
-      <div class="detail">
-        <h2>ABHINANDAN GHOSH<br /><span>🎓 Computer Science Undergraduate at Midnapore College(Autonomous)</span></h2>
-        <ul class="sci">
-          <li>
-            <a href="https://m.facebook.com/profile.php/?id=100064762745129&name=xhp_nt__fb__action__open_user"><i class="fab fa-facebook-f"></i></a>
-          </li>
-          <li>
-            <a href="chat.txt"><i class="fab fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href="https://github.com/"><i class="fab fa-github"></i></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/abhinandanghosssh/"><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
-<style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Student ID Card</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
 
-body {
-    font-family: 'Times New Roman', Times, serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background: linear-gradient(#03a9f4, #03a9f4 45%, #fff 45%, #fff 100%);
-}
+        #id-card {
+            width: 300px;
+            height: 500px;
+            background-color: #1a1a1a;
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            text-align: center;
+            overflow: hidden;
+        }
 
-.card {
-  position: relative;
-  width: 340px;
-  height: 440px;
-  background: #fff;
-  border-radius: 10px;
-  background: rgba(255, 255, 255, 0.1);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(15px);
-  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
-}
+        #profile-pic {
+            width: 200px;
+            height: 250px;
+            border-radius: 10px; /* Square border-radius */
+            object-fit: cover;
+            margin-bottom: 20px;
+            border: 4px solid #00bcd4;
+        }
 
-.img-bx {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  transform: translateY(30px) scale(0.5);
-  transform-origin: top;
-}
+        #name {
+            color: #fff;
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
 
-.img-bx img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+        #designation {
+            color: #00bcd4;
+            font-size: 16px;
+            margin-bottom: 20px;
+        }
 
-.content {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  padding-bottom: 30px;
-}
+        .social-icons {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
 
-.content .detail {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-}
+        .social-icons i {
+            font-size: 30px;
+            color: #00bcd4;
+            transition: transform 0.3s;
+        }
 
-.content .detail h2 {
-  color: #444;
-  font-size: 1.6em;
-  font-weight: bolder;
-}
-
-.content .detail h2 span {
-  font-size: 0.7em;
-  color: #03a9f4;
-  font-weight: bold;
-}
-
+        .social-icons i:hover {
+            transform: scale(1.2);
+        }
 .sci {
   position: relative;
   display: flex;
@@ -131,7 +80,7 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background: transparent;
+  background:#A0DAA9;
   font-size: 1.5em;
   color: #444;
   text-decoration: none;
@@ -143,3 +92,27 @@ body {
   background: #03a9f4;
   color: #fff;
 }
+    </style>
+</head>
+<body>
+    <div id="id-card">
+        <img src="e5fbaff1-02c6-47f7-b744-fca734e95692-transformed.jpeg" alt="Profile Picture" id="profile-pic">
+        <div id="name"><h3>ABHINANDAN GHOSH</h3></div>
+        <div id="designation">ðŸŽ“ Computer Science Undergraduate at Midnapore College(Autonomous)</div>
+        <ul class="sci">
+          <li>
+            <a href="https://m.facebook.com/profile.php/?id=100064762745129&name=xhp_nt__fb__action__open_user"><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href="chat.txt"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="https://github.com/"><i class="fab fa-github"></i></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/abhinandanghosssh/"><i class="fab fa-instagram"></i></a>
+          </li>
+        </ul>
+    </div>
+</body>
+</html>
