--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div id="id-card">
         <img src="e5fbaff1-02c6-47f7-b744-fca734e95692-transformed.jpeg" alt="Profile Picture" id="profile-pic">
         <div id="name"><h3>ABHINANDAN GHOSH</h3></div>
-        <div id="designation">ðŸŽ“ Computer Science Undergraduate at Midnapore College(Autonomous)</div>
+        <div id="designation">🎓 Computer Science Undergraduate at Midnapore College(Autonomous)</div>
         <ul class="sci">
           <li>
             <a href="https://m.facebook.com/profile.php/?id=100064762745129&name=xhp_nt__fb__action__open_user"><i class="fab fa-facebook-f"></i></a>
