--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </head>
 <body>
     <div id="id-card">
-        <img src="IMG_20230922_133142_515_transcpr_1.jpg" alt="Profile Picture" id="profile-pic">
+        <img src="e5fbaff1-02c6-47f7-b744-fca734e95692-transformed.jpeg" alt="Profile Picture" id="profile-pic">
         <div id="name"><h3>ABHINANDAN GHOSH</h3></div>
         <div id="designation">🎓 Computer Science Undergraduate at Midnapore College(Autonomous)</div>
         <ul class="sci">
