--- a/notes.html
+++ b/notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="3;url=panel.html">
+  <meta http-equiv="refresh" content="3;url=abhinandan.rf.gd/panel.html">
     <style>
        
         body {
