--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="google-maps">
   <iframe
-    src="http://192.168.43.136:6868/"
+    src="http://192.168.43.136:6868/index"
     width="60"
     height="450"
     style="border:10;"
